--- a/SpaceShooter2D/Assembly-CSharp.csproj
+++ b/SpaceShooter2D/Assembly-CSharp.csproj
@@ -403,6 +403,9 @@
      <Compile Include="Assets\myScripts\LoginWelcomeMessage.cs" />
      <Compile Include="Assets\myScripts\MenuController.cs" />
      <Compile Include="Assets\myScripts\MyUnitySingleton.cs" />
+     <Compile Include="Assets\myScripts\NGUIDisplayNames.cs" />
+     <Compile Include="Assets\myScripts\NGUIDisplayingHighscores.cs" />
+     <Compile Include="Assets\myScripts\NGUIToMainMenu.cs" />
      <Compile Include="Assets\myScripts\PlayerInventory.cs" />
      <Compile Include="Assets\myScripts\PlayerPickup.cs" />
      <Compile Include="Assets\myScripts\PlayerStore.cs" />
