working on ngui change over almost there

--- a/SpaceShooter2D/Assembly-CSharp-vs.csproj
+++ b/SpaceShooter2D/Assembly-CSharp-vs.csproj
@@ -395,6 +395,7 @@
      <Compile Include="Assets\myScripts\Done_PlayerController.cs" />
      <Compile Include="Assets\myScripts\DropItems.cs" />
      <Compile Include="Assets\myScripts\EnemyHealthBar.cs" />
+     <Compile Include="Assets\myScripts\GameControllerNGUI.cs" />
      <Compile Include="Assets\myScripts\GoTohighScores.cs" />
      <Compile Include="Assets\myScripts\HealthBar.cs" />
      <Compile Include="Assets\myScripts\HighScoreBoard.cs" />
@@ -402,6 +403,7 @@
      <Compile Include="Assets\myScripts\LoadSceneContainers.cs" />
      <Compile Include="Assets\myScripts\LoginWelcomeMessage.cs" />
      <Compile Include="Assets\myScripts\MenuController.cs" />
+     <Compile Include="Assets\myScripts\MusicManager.cs" />
      <Compile Include="Assets\myScripts\MyUnitySingleton.cs" />
      <Compile Include="Assets\myScripts\NGUIDisplayNames.cs" />
      <Compile Include="Assets\myScripts\NGUIDisplayingHighscores.cs" />
@@ -410,12 +412,14 @@
      <Compile Include="Assets\myScripts\PlayerPickup.cs" />
      <Compile Include="Assets\myScripts\PlayerStore.cs" />
      <Compile Include="Assets\myScripts\PressMain.cs" />
+     <Compile Include="Assets\myScripts\PressmainNGUI.cs" />
      <Compile Include="Assets\myScripts\QuitGame.cs" />
      <Compile Include="Assets\myScripts\RotateParticle.cs" />
      <Compile Include="Assets\myScripts\SpaceShooterStore.cs" />
      <Compile Include="Assets\myScripts\SpawnParticleEffect.cs" />
      <Compile Include="Assets\myScripts\StartGame.cs" />
      <Compile Include="Assets\myScripts\Status.cs" />
+     <Compile Include="Assets\myScripts\StatusNGUI.cs" />
      <Compile Include="Assets\myScripts\ToMainMenu.cs" />
      <None Include="Assets\NGUI\Examples\Shaders\Unlit - Depth Cutout.shader" />
      <None Include="Assets\NGUI\ReadMe - 3.5.7.txt" />
