--- a/SpaceShooter2D/Assembly-CSharp-vs.csproj
+++ b/SpaceShooter2D/Assembly-CSharp-vs.csproj
@@ -408,6 +408,7 @@
      <Compile Include="Assets\myScripts\NGUIDisplayNames.cs" />
      <Compile Include="Assets\myScripts\NGUIDisplayingHighscores.cs" />
      <Compile Include="Assets\myScripts\NGUIToMainMenu.cs" />
+     <Compile Include="Assets\myScripts\PlayerHealthBarNGUI.cs" />
      <Compile Include="Assets\myScripts\PlayerInventory.cs" />
      <Compile Include="Assets\myScripts\PlayerPickup.cs" />
      <Compile Include="Assets\myScripts\PlayerStore.cs" />
