--- a/SpaceShooter2D/Assembly-CSharp-vs.csproj
+++ b/SpaceShooter2D/Assembly-CSharp-vs.csproj
@@ -395,6 +395,7 @@
      <Compile Include="Assets\myScripts\Done_PlayerController.cs" />
      <Compile Include="Assets\myScripts\DropItems.cs" />
      <Compile Include="Assets\myScripts\EnemyHealthBar.cs" />
+     <Compile Include="Assets\myScripts\EnemyHealthBarNGUI.cs" />
      <Compile Include="Assets\myScripts\GameControllerNGUI.cs" />
      <Compile Include="Assets\myScripts\GoTohighScores.cs" />
      <Compile Include="Assets\myScripts\HealthBar.cs" />
@@ -422,6 +423,7 @@
      <Compile Include="Assets\myScripts\Status.cs" />
      <Compile Include="Assets\myScripts\StatusNGUI.cs" />
      <Compile Include="Assets\myScripts\ToMainMenu.cs" />
+     <Compile Include="Assets\myScripts\createEnemyHealthBar.cs" />
      <None Include="Assets\NGUI\Examples\Shaders\Unlit - Depth Cutout.shader" />
      <None Include="Assets\NGUI\ReadMe - 3.5.7.txt" />
      <None Include="Assets\NGUI\Resources\Shaders\Unlit - Text 2.shader" />
