got input working way i wanted it no clue if done right tho lmao

--- a/SpaceShooter2D/Assembly-CSharp-vs.csproj
+++ b/SpaceShooter2D/Assembly-CSharp-vs.csproj
@@ -404,6 +404,7 @@
      <Compile Include="Assets\myScripts\LoadSceneContainers.cs" />
      <Compile Include="Assets\myScripts\LoginWelcomeMessage.cs" />
      <Compile Include="Assets\myScripts\MenuController.cs" />
+     <Compile Include="Assets\myScripts\MenuControllerNGUI.cs" />
      <Compile Include="Assets\myScripts\MusicManager.cs" />
      <Compile Include="Assets\myScripts\MyUnitySingleton.cs" />
      <Compile Include="Assets\myScripts\NGUIDisplayNames.cs" />
