--- a/SpaceShooter2D/Assembly-CSharp-vs.csproj
+++ b/SpaceShooter2D/Assembly-CSharp-vs.csproj
@@ -396,6 +396,7 @@
      <Compile Include="Assets\myScripts\DropItems.cs" />
      <Compile Include="Assets\myScripts\EnemyHealthBar.cs" />
      <Compile Include="Assets\myScripts\EnemyHealthBarNGUI.cs" />
+     <Compile Include="Assets\myScripts\FollowEnemy.cs" />
      <Compile Include="Assets\myScripts\GameControllerNGUI.cs" />
      <Compile Include="Assets\myScripts\GoTohighScores.cs" />
      <Compile Include="Assets\myScripts\HealthBar.cs" />
